# dialpad-python-sdk

./: .bumpversion.cfg  .gitignore  LICENSE  Pipfile  README.md  README.rst  dev-requirements.txt  dev_requirements.txt  dialpad_api_spec.json  module_mapping.json  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/: copilot-instructions.md
.github/workflows/: ci.yml  publish.yml
cli/: interactive_update_overview.md  main.py
cli/client_gen/: annotation.py  module_mapping.py  resource_classes.py  resource_methods.py  resource_modules.py  resource_packages.py  schema_classes.py  schema_modules.py  schema_packages.py  utils.py
dialpad/: client.py
dialpad/resources/: __init__.py  blocked_number.py  call.py  call_event_subscription.py  call_router.py  callback.py  callcenter.py  contact.py  deparment.py  device.py  event_subscription.py  number.py  office.py  resource.py  room.py  sms.py  stats.py  subscription.py  transcript.py  user.py  userdevice.py
src/dialpad/: __init__.py  async_client.py  client.py
src/dialpad/async_resources/: __init__.py  async_access_control_policies_resource.py  async_agent_status_event_subscriptions_resource.py  async_app_settings_resource.py  async_blocked_numbers_resource.py  async_call_center_operators_resource.py  async_call_centers_resource.py  async_call_event_subscriptions_resource.py  async_call_labels_resource.py  async_call_review_share_links_resource.py  async_call_routers_resource.py  async_callbacks_resource.py  async_calls_resource.py  async_changelog_event_subscriptions_resource.py  async_channels_resource.py  async_coaching_teams_resource.py  async_company_resource.py  async_contact_event_subscriptions_resource.py  async_contacts_resource.py  async_custom_ivrs_resource.py  async_departments_resource.py  async_fax_lines_resource.py  async_meeting_rooms_resource.py  async_meetings_resource.py  async_numbers_resource.py  async_oauth2_resource.py  async_oauth_apps_resource.py  async_offices_resource.py  async_recording_share_links_resource.py  async_rooms_resource.py  async_schedule_reports_resource.py  async_sms_event_subscriptions_resource.py  async_sms_resource.py  async_stats_resource.py  async_transcripts_resource.py  async_user_devices_resource.py  async_users_resource.py  async_webhooks_resource.py  async_websockets_resource.py  base.py
src/dialpad/resources/: __init__.py  access_control_policies_resource.py  agent_status_event_subscriptions_resource.py  app_settings.py  app_settings_resource.py  base.py  blocked_numbers_resource.py  call.py  call_center_operators_resource.py  call_centers_resource.py  call_event_subscriptions_resource.py  call_labels_resource.py  call_review_share_links_resource.py  call_router.py  call_routers_resource.py  callbacks_resource.py  callcenter.py  calls_resource.py  changelog_event_subscriptions_resource.py  channels_resource.py  coaching_teams_resource.py  company.py  company_resource.py  contact.py  contact_event_subscriptions_resource.py  contacts_resource.py  custom_iv_rs_resource.py  custom_ivrs_resource.py  department.py  departments_resource.py  number.py  (+27 more)
test/: __init__.py  test_async_client_methods.py  test_client_gen.py  test_client_methods.py  test_resource_sanity.py  utils.py
test/client_gen_tests/: test_client_gen_completeness.py  test_client_gen_correctness.py
tools/: create_release.sh
(+49 files in other folders)
