[project]
name = "python-dialpad"
version = "3.0.0"
description = "A python wrapper for the Dialpad REST API"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "cached-property>=2.0.1",
    "requests",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["src/dialpad"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.uv]
dev-dependencies = [
    "faker>=37.3.0",
    "openapi-core>=0.19.5",
    "pytest>=8.4.0",
    "requests-mock>=1.12.1",
    "six>=1.17.0",
    "swagger-parser",
    "swagger-stub>=0.2.1",
    "urllib3>=2.4.0",
]

[tool.uv.sources]
swagger-parser = { git = "https://github.com/jakedialpad/swagger-parser", rev = "v1.0.1b" }
